fix checkbox and title too close

--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -80,6 +80,11 @@ main h2 {
   justify-content: space-between;
 }
 
+.task-item .info div:nth-of-type(1) {
+  display: flex;
+  gap: 10px;
+}
+
 .task-item .operations {
   display: flex;
   gap: 10px;
